--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                
 
             </div>
-            <canvas id="whiteboard" style="border: 1px solid black;"></canvas>
+            <!--<canvas id="whiteboard" style="border: 1px solid black;"></canvas>-->
             <div id="calculator-container" style="display: none; width: 600px; height: 400px; border: 1px solid black;"></div>
 
         </div>
