--- a/public/index.html
+++ b/public/index.html
@@ -8,28 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app">
-        <h1>Welcome to the Virtual Study Room</h1>
-        <div id="options">
-            <button id="create-room">Create Room</button>
-            <button id="join-room">Join Room</button>
-        </div>
-        <div id="room-code-input" style="display: none;">
-            <input type="text" id="room-code" placeholder="Enter Room Code">
-            <button id="join">Join</button>
-        </div>
-        <!-- Room view will be dynamically shown after joining a room -->
-        <div id="room-view" style="display: none;">
-            <h2 id="room-title">Room: </h2>
-            <div id="toolbar">
-                <button id="draw-mode">Draw</button>
-                <button id="add-rectangle">Rectangle</button>
-                <button id="clear-drawing">Clear Drawing</button>
-                <button id="add-circle">Circle</button>
-                <button id="open-calculator">Open Calculator</button>
-                
-               
-
+    <div class="homepage">
+        <h1> Welcome to [ProjectName]</h1>
+        <h2>The better way to collaborate</h2>
+        <img src = "https://tinyurl.com/nhdxaznw" width = "100px" height = "30px" > 
+        <h3>To get started, enter your join code or create a room.</h3>
+        <a href="public/newroompage.html">
+        <button type="button" id = "to-create-room">Create New Room</button>
+        </a>
+        <br><br>
+      <input type="text" id="room-code" placeholder="Enter Code">
+      <button id="join">Join</button>
+  </div>
             </div>
             <!--<canvas id="whiteboard" style="border: 1px solid black;"></canvas>-->
             <div id="calculator-container" style="display: none; width: 600px; height: 400px; border: 1px solid black;"></div>
